--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   animated_text_kit: ^3.1.0
   modal_progress_hud: ^0.1.3
   swipeable_card: ^1.0.2
+  sliding_up_panel: ^1.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
