--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,28 +55,70 @@ flutter:
   assets:
     - images/
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    - family: Dosis
+      fonts:
+        - asset: Fonts/Dosis-VariableFont_wght.ttf
+    - family: Fascinate
+      fonts:
+        - asset: Fonts/Fascinate-Regular.ttf
+    - family: FasterOne Regular
+      fonts:
+        - asset: Fonts/FasterOne-Regular.ttf
+    - family: FaunaOne Regular
+      fonts:
+        - asset: Fonts/FaunaOne-Regular.ttf
+    - family: LobsterTwo Bold
+      fonts:
+        - asset: Fonts/LobsterTwo-Bold.ttf
+    - family: LobsterTwo BoldItalic
+      fonts:
+        - asset: Fonts/LobsterTwo-BoldItalic.ttf
+    - family: LobsterTwo Italic
+      fonts:
+        - asset: Fonts/LobsterTwo-Italic.ttf
+    - family: LobsterTwo Regular
+      fonts:
+        - asset: Fonts/LobsterTwo-Regular.ttf
+    - family: Merriweather Black
+      fonts:
+        - asset: Fonts/Merriweather-Black.ttf
+    - family: Merriweather BlackItalic
+      fonts:
+            - asset: Fonts/Merriweather-BlackItalic.ttf
+    - family: Merriweather Bold
+      fonts:
+        - asset: Fonts/Merriweather-Bold.ttf
+    - family: Merriweather BoldItalic
+      fonts:
+        - asset: Fonts/Merriweather-BoldItalic.ttf
+    - family: Merriweather Italic
+      fonts:
+        - asset: Fonts/Merriweather-Italic.ttf
+    - family: Merriweather Light
+      fonts:
+        - asset: Fonts/Merriweather-Light.ttf
+    - family: Merriweather LightItalic
+      fonts:
+        - asset: Fonts/Merriweather-LightItalic.ttf
+    - family: Merriweather_Regular
+      fonts:
+        - asset: Fonts/Merriweather-Regular.ttf
+    - family: Monoton Regular
+      fonts:
+        - asset: Fonts/Monoton-Regular.ttf
+    - family: PlayfairDisplay Italic VariableFont wght
+      fonts:
+        - asset: Fonts/PlayfairDisplay-Italic-VariableFont_wght.ttf
+    - family: PlayfairDisplay VariableFont wght
+      fonts:
+        - asset: Fonts/PlayfairDisplay-VariableFont_wght.ttf
+    - family: StalinistOne Regular
+      fonts:
+        - asset: Fonts/StalinistOne-Regular.ttf
+    - family: ZillaSlabHighlight Bold
+      fonts:
+        - asset: Fonts/ZillaSlabHighlight-Bold.ttf
+    - family: ZillaSlabHighlight Regular
+      fonts:
+        - asset: Fonts/ZillaSlabHighlight-Regular.ttf
