--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   modal_progress_hud: ^0.1.3
   swipeable_card: ^1.0.2
   sliding_up_panel: ^1.0.2
+  clickable_list_wheel_view: ^0.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
