--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     #packages for settings view ^
   shared_preferences: ^2.0.5
   syncfusion_flutter_datepicker: ^19.1.56-beta
-  intl: ^0.15.7
+  intl: ^0.17.0
   date_format: ^2.0.2
   multi_select_flutter: ^4.0.0
   animated_text_kit: ^3.1.0
@@ -40,6 +40,15 @@ dependencies:
   swipeable_card: ^1.0.2
   sliding_up_panel: ^1.0.2
   clickable_list_wheel_view: ^0.0.4
+
+  #packages for Firebase
+  firebase_core: ^1.0.4
+  # Add the dependency for the FlutterFire plugin for Google Analytics
+  # firebase_analytics: 
+  # Add the dependencies for any other Firebase products you want to use in your app
+  # For example, to use Firebase Authentication and Cloud Firestore
+  firebase_auth: ^1.1.1
+  cloud_firestore: ^1.0.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
